# libexpat-rust

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  test_c_libexpat  test_c_libexpat.c  test_debug  test_debug.c  test_divergences.rs  test_foreign_dtd  test_foreign_dtd.c  test_foreign_dtd_debug  test_foreign_dtd_debug.c  test_invalid_dtd  test_invalid_dtd.c  test_invalid_dtd2  test_invalid_dtd2.c  test_xmldecl.rs
agents/: fix-test-batch.md  port-data-tables.md  translate-c-tests.md
c-tests-runner/: Cargo.toml  build.rs  check-regressions.sh  known-failures.txt  runtests_basic_only.c
c-tests-runner/src/: lib.rs  main.rs
docs/: architecture.md  benchmarks.md  c-test-status.md  c-test-validation.md  design-decisions.md  missing-test-coverage.md  performance-analysis.md  porting-process.md  verification.md
expat-ffi/: Cargo.toml  README.md
expat-ffi/examples/: Makefile  basic_parse.c
expat-ffi/src/: lib.rs
expat-ffi/tests/: Makefile  test_ffi.c
expat-rust/: Cargo.toml  test_debug.rs
expat-rust/benches/: parse_benchmark.rs  pathological_benchmark.rs
expat-rust/examples/: test_debug.rs
expat-rust/src/: ascii.rs  char_tables.rs  lib.rs  nametab.rs  siphash.rs  xmlparse.rs  xmlrole.rs  xmltok.rs  xmltok_impl.rs
expat-rust/tests/: acc_tests.rs  alloc_tests.rs  auto_coverage_tests.rs  basic_tests_0.rs  basic_tests_1.rs  basic_tests_2.rs  basic_tests_3.rs  basic_tests_4.rs  basic_tests_missing.rs  c_comparison_tests.rs  comprehensive_comparison.rs  coverage_90_tests.rs  coverage_comparison_tests.rs  divergence_test.rs  extracted_c_inputs.rs  final_90_tests.rs  fuzz_corpus_analysis.rs  fuzz_corpus_comparison.rs  fuzz_debug.rs  fuzz_sax_comparison.rs  fuzz_status_mismatch.rs  generated_comparison_tests.rs  integration_test.rs  memory_usage_tests.rs  misc_tests.rs  ns_tests.rs  nsalloc_tests.rs  sax_compare.rs  test_helpers.rs
expat-rust/tests/extracted/: acc_tests.json  alloc_tests.json  basic_tests.json  misc_tests.json  ns_tests.json  nsalloc_tests.json
expat-rust/tests/test_helpers/: mod.rs
expat-sys/: Cargo.toml  build.rs
meta/: README.md
plans/: PORTING-PROCESS.md  c2rust-port-plan.md  call-tree-overrides.md  process-log.md  test-translation-pipeline.md
scripts/: ast-compare.py  c2rust-analyze-patterns.py  c2rust-cleanup.py  compare-functions.py  port-function.py  (+10 more)
(+92 files in other folders)
