[package]
name = "expat-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "A memory-safe, idiomatic Rust reimplementation of libexpat XML parser"
homepage = "https://github.com/robennals/libexpat-rust"
repository = "https://github.com/robennals/libexpat-rust"
documentation = "https://docs.rs/expat-rust"
keywords = ["xml", "parser", "expat", "sax", "streaming"]
categories = ["parser-implementations", "encoding"]
readme = "../README.md"
exclude = ["/meta", "/docs", "/expat", "/expat-sys", "/expat-ffi", "/c-tests-runner"]

[dependencies]

[dev-dependencies]
expat-sys = { path = "../expat-sys" }
criterion = { version = "0.5", features = ["html_reports"] }
libc = "0.2"

[[bench]]
name = "parse_benchmark"
harness = false
